@@ -17,20 +17,21 @@ package org.apache.lucene.search.join;
  * limitations under the License.
  */
 
-import java.io.IOException;
-
-import org.apache.lucene.index.LeafReaderContext;
 import org.apache.lucene.index.BinaryDocValues;
 import org.apache.lucene.index.DocValues;
+import org.apache.lucene.index.LeafReaderContext;
 import org.apache.lucene.index.SortedSetDocValues;
 import org.apache.lucene.search.Scorer;
 import org.apache.lucene.search.SimpleCollector;
 import org.apache.lucene.util.ArrayUtil;
 import org.apache.lucene.util.BytesRefHash;
 
+import java.io.IOException;
+import java.util.Arrays;
+
 abstract class TermsWithScoreCollector extends SimpleCollector {
 
-  private final static int INITIAL_ARRAY_SIZE = 256;
+  private final static int INITIAL_ARRAY_SIZE = 0;
 
   final String field;
   final BytesRefHash collectedTerms = new BytesRefHash();
@@ -42,6 +43,11 @@ abstract class TermsWithScoreCollector extends SimpleCollector {
   TermsWithScoreCollector(String field, ScoreMode scoreMode) {
     this.field = field;
     this.scoreMode = scoreMode;
+    if (scoreMode == ScoreMode.Min) {
+      Arrays.fill(scoreSums, Float.POSITIVE_INFINITY);
+    } else if (scoreMode == ScoreMode.Max) {
+      Arrays.fill(scoreSums, Float.NEGATIVE_INFINITY);
+    }
   }
 
   public BytesRefHash getCollectedTerms() {
@@ -98,7 +104,13 @@ abstract class TermsWithScoreCollector extends SimpleCollector {
         ord = -ord - 1;
       } else {
         if (ord >= scoreSums.length) {
+          int begin = scoreSums.length;
           scoreSums = ArrayUtil.grow(scoreSums);
+          if (scoreMode == ScoreMode.Min) {
+            Arrays.fill(scoreSums, begin, scoreSums.length, Float.POSITIVE_INFINITY);
+          } else if (scoreMode == ScoreMode.Max) {
+            Arrays.fill(scoreSums, begin, scoreSums.length, Float.NEGATIVE_INFINITY);
+          }
         }
       }
 
@@ -111,10 +123,16 @@ abstract class TermsWithScoreCollector extends SimpleCollector {
           case Total:
             scoreSums[ord] = scoreSums[ord] + current;
             break;
+          case Min:
+            if (current < existing) {
+              scoreSums[ord] = current;
+            }
+            break;
           case Max:
             if (current > existing) {
               scoreSums[ord] = current;
             }
+            break;
         }
       }
     }
@@ -187,7 +205,13 @@ abstract class TermsWithScoreCollector extends SimpleCollector {
           termID = -termID - 1;
         } else {
           if (termID >= scoreSums.length) {
+            int begin = scoreSums.length;
             scoreSums = ArrayUtil.grow(scoreSums);
+            if (scoreMode == ScoreMode.Min) {
+              Arrays.fill(scoreSums, begin, scoreSums.length, Float.POSITIVE_INFINITY);
+            } else if (scoreMode == ScoreMode.Max) {
+              Arrays.fill(scoreSums, begin, scoreSums.length, Float.NEGATIVE_INFINITY);
+            }
           }
         }
         
@@ -195,8 +219,12 @@ abstract class TermsWithScoreCollector extends SimpleCollector {
           case Total:
             scoreSums[termID] += scorer.score();
             break;
+          case Min:
+            scoreSums[termID] = Math.min(scoreSums[termID], scorer.score());
+            break;
           case Max:
             scoreSums[termID] = Math.max(scoreSums[termID], scorer.score());
+            break;
         }
       }
     }
